--- a/KCETPreviousYearPapers/app/src/main/res/layout/item_view.xml
+++ b/KCETPreviousYearPapers/app/src/main/res/layout/item_view.xml
@@ -1,30 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginVertical="5dp">
+        android:layout_margin="5dp">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/viewCard"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:elevation="10dp"
-            android:id="@+id/viewCard"
-            app:cardCornerRadius="20dp"
-            android:backgroundTint="@color/viewcard"
             android:layout_marginVertical="7dp"
             android:layout_marginHorizontal="3dp"
-            app:cardElevation="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:backgroundTint="@color/viewcard"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="5dp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintVertical_bias="0.5">
 
-            <RelativeLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -34,27 +33,30 @@
                     android:id="@+id/imageview"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:layout_centerHorizontal="true"
                     android:scaleType="fitCenter"
-                    android:elevation="10dp"
+                    android:elevation="5dp"
                     android:padding="1dp"
-                    app:shapeAppearanceOverlay="@style/sty" />
+                    app:shapeAppearanceOverlay="@style/sty"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/descriptionTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageview"
-                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="8dp"
+                    android:paddingVertical="1dp"
                     android:textAlignment="center"
-                    android:text="Architecture"
                     android:fontFamily="@font/abcd"
                     android:textStyle="bold"
-                    android:paddingVertical="1dp"
                     android:textColor="@color/textviewcard"
-                    android:layout_marginTop="8dp"
-                    android:textSize="15sp" />
-            </RelativeLayout>
+                    android:textSize="15sp"
+                    app:layout_constraintTop_toBottomOf="@id/imageview"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
 
