--- a/KCETPreviousYearPapers/app/src/main/res/layout/item_view_lan.xml
+++ b/KCETPreviousYearPapers/app/src/main/res/layout/item_view_lan.xml
@@ -2,50 +2,28 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/lanCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:paddingVertical="2dp">
+        android:layout_marginVertical="4dp"
+        android:layout_marginHorizontal="10dp"
+        android:minHeight="45dp"
+        android:backgroundTint="@color/viewLan"
+        app:cardCornerRadius="10dp">
 
-        <androidx.cardview.widget.CardView
+        <TextView
+            android:id="@+id/descriptionLan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="45dp"
-            android:layout_margin="2dp"
-            android:elevation="10dp"
-            app:cardCornerRadius="10dp"
-            android:backgroundTint="@color/viewLan"
-            android:id="@+id/lanCard"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5">
+            android:layout_marginStart="13dp"
+            android:layout_marginVertical="5dp"
+            android:gravity="start"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/textviewLan"
+            android:textSize="22sp"
+            android:fontFamily="@font/abcd"
+            android:textStyle="bold" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="3dp">
-
-                <TextView
-                    android:id="@+id/descriptionLan"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="10dp"
-                    android:fontFamily="@font/abcd"
-                    android:gravity="start"
-                    android:text="HELLO"
-                    android:textColor="@color/textviewLan"
-                    android:textSize="22sp"
-                    android:paddingVertical="2dp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
